# voice-cloned-AI-lecture-video-generator

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  PROJECT_BRIEF.md  README.md  renovate.json
.github/workflows/: backend-ci.yml  e2e.yml  frontend-ci.yml  license-audit.yml
backend/: .env.example  Dockerfile  Dockerfile.gpu  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: audio.py  blobs.py  health.py  jobs.py  projects.py  scripts.py  slides.py  video.py  voices.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py  telemetry.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_add_slides_and_jobs.py  0002_add_voice_profiles_and_projects.py  0003_add_scripts.py  0004_add_audio_clips.py  0005_add_video_artifacts.py
backend/app/db/models/: __init__.py  audio_clip.py  job.py  project.py  script.py  slide.py  video_artifact.py  voice_profile.py
backend/app/db/repositories/: __init__.py  audio_clip_repository.py  job_repository.py  project_repository.py  script_repository.py  slide_repository.py  video_artifact_repository.py  voice_profile_repository.py
backend/app/domain/: entities.py  exceptions.py  value_objects.py
backend/app/schemas/: __init__.py
backend/app/services/audio/: mime.py
backend/app/services/script/: factory.py  gemini_adapter.py  interface.py  ollama_adapter.py  prompts.py
backend/app/services/script/templates/: script_generation_v1.md
backend/app/services/slides/: factory.py  interface.py  mime.py  pdf_parser.py  pptx_parser.py
backend/app/services/storage/: factory.py  interface.py  s3_adapter.py
backend/app/services/transcription/: factory.py  interface.py  whisper_adapter.py
backend/app/services/tts/: f5_adapter.py  factory.py  interface.py  model_manager.py  xtts_adapter.py
backend/app/services/video/: assembler.py  probe.py  srt_generator.py
backend/app/tasks/: _async_bridge.py  celery_app.py  script_generation.py  slide_ingestion.py  tts_synthesis.py  video_assembly.py  voice_ingestion.py  voice_preview.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_3slide.pptx
backend/tests/unit/: test_blob_proxy.py  test_domain_entities.py  test_health.py  test_pdf_parser.py  test_per_slide_endpoints.py  test_phase9_observability.py  test_pptx_parser.py  test_script_generation.py  test_security.py  test_slide_mime.py  test_slide_upload_endpoint.py  test_tts.py  test_video_assembly.py  test_voice_ingestion_task.py  test_voices.py
docs/: LICENSE_AUDIT.md  README.md  api.md  architecture.md  known-limitations.md  progress.md  runbook.md
docs/adr/: 0001-record-architecture-decisions.md  0002-choose-f5-tts-as-primary.md  (+10 more)
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
infra/: docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml
sample-content/: sample-voice-instructions.md
scripts/: backup.sh  bench-tts.py  license-audit.py  load-test.sh  seed.py
(+30 files in other folders)
